--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,7 @@
     <string name="atau">Atau</string>
     <string name="pertama">Pertama, kenalan dulu yuk…</string>
     <string name="login">Login</string>
+    <string name="selamat_datang">Selamat datang kembali teman!</string>
+    <string name="username">Username</string>
+    <string name="password">Password</string>
 </resources>
